# agent-cassette

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  VERSION_PLAN.md  action.yml  pyproject.toml  repomix-output.xml
.github/workflows/: ci.yml  publish.yml
benchmarks/: large_cassette.py
docs/: adding-a-provider.md  architecture.md  beta-upgrade.md  cassette-schema.md  cli-exit-codes.md  cli.md  compatibility.md  forks.md  integrations.md  public-api.md  releasing.md  security.md  testing.md
docs/superpowers/plans/: 2026-07-19-gemini-provider.md  2026-07-19-mistral-provider.md
docs/superpowers/specs/: 2026-07-18-multi-provider-foundation-design.md
examples/research_agent/: demo.py
src/agent_cassette/: __init__.py  adapters.py  assertions.py  automatic.py  cassette.py  cli.py  deprecations.py  diagnostics.py  diff.py  events.py  hybrid.py  json_codec.py  matching.py  migration.py  project_init.py  pytest_plugin.py  recorder.py  redaction.py  replay.py  reports.py  runner.py  storage.py  viewer.py
src/agent_cassette/integrations/: __init__.py  _provider.py  anthropic.py  gemini.py  langchain.py  langchain_callbacks.py  mcp.py  mistral.py  openai.py  openai_agents.py
src/agent_cassette/interop/: __init__.py  otlp.py
tests/: test_adapters.py  test_anthropic_integration.py  test_assertions.py  test_async_matching.py  test_automatic.py  test_beta_cli.py  test_cli.py  test_cli_exit_codes.py  test_contract_snapshots.py  test_diff.py  test_doctor.py  test_event_validation.py  test_fuzzy_matching.py  test_gemini_integration.py  test_hybrid.py  test_init.py  test_injection_advanced.py  test_json_surfaces.py  test_langchain.py  test_langchain_callbacks.py  test_mcp.py  test_migration.py  test_mistral_integration.py  test_openai_agents.py  test_openai_integration.py  test_otlp.py  test_provider_generalizations.py  test_public_api.py  test_pytest_plugin.py  test_record_replay.py  test_redaction.py  test_replay_advanced.py  test_reports.py  test_storage_recovery.py  test_streaming_spans.py  test_version.py  test_viewer.py
