[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cassette"
version = "0.11.0b1"
description = "Deterministic record, replay, and trajectory diffing for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Adarsh Srinivasan" }]
keywords = ["ai-agents", "testing", "replay", "debugging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
agents = ["openai-agents>=0.1"]
all = ["openai>=1.0", "anthropic>=0.34", "openai-agents>=0.1"]

[project.scripts]
agent-cassette = "agent_cassette.cli:main"

[project.entry-points.pytest11]
agent_cassette = "agent_cassette.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cassette"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
