[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cassette"
version = "1.0.0"
description = "Deterministic record, replay, and trajectory diffing for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Adarsh Srinivasan" }]
keywords = ["ai-agents", "testing", "replay", "debugging"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = ["tomli>=2; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/adarshs02/agent-cassette"
Repository = "https://github.com/adarshs02/agent-cassette"
Documentation = "https://github.com/adarshs02/agent-cassette/tree/main/docs"
Issues = "https://github.com/adarshs02/agent-cassette/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hatchling>=1.26",
  "mypy>=1.11",
  "pytest>=8",
  "ruff>=0.5",
]
openai = ["openai>=1,<3"]
anthropic = ["anthropic>=0.34,<1"]
agents = ["openai-agents>=0.1,<1"]
langchain = ["langchain-core>=0.3,<2"]
mistral = ["mistralai>=1,<2"]
all = [
  "openai>=1,<3",
  "anthropic>=0.34,<1",
  "openai-agents>=0.1,<1",
  "langchain-core>=0.3,<2",
  "mistralai>=1,<2",
]

[project.scripts]
agent-cassette = "agent_cassette.cli:main"

[project.entry-points.pytest11]
agent_cassette = "agent_cassette.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cassette"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".agents", ".codegraph"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Contract snapshots hold verbatim signature strings that must not be reflowed.
"tests/test_contract_snapshots.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
exclude = "(^|/)(\\.agents|\\.codegraph)/"
check_untyped_defs = true
warn_unused_configs = true

# These modules predate the initial mypy gate. Keep the exclusions explicit so new
# source and test modules are checked while the legacy typing debt is retired.
[[tool.mypy.overrides]]
module = [
  "agent_cassette.cli",
  "agent_cassette.hybrid",
  "agent_cassette.interop.otlp",
  "test_adapters",
  "test_anthropic_integration",
  "test_async_matching",
  "test_automatic",
  "test_beta_cli",
  "test_hybrid",
  "test_injection_advanced",
  "test_openai_agents",
  "test_openai_integration",
  "test_record_replay",
  "test_replay_advanced",
  "test_streaming_spans",
]
ignore_errors = true
